--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "5.0.*"
+		"laravel/framework": "~5.0"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.0",
+		"phpunit/phpunit": "~5.0",
 		"phpdocumentor/phpdocumentor": "~2.0"
 	},
 	"autoload": {
